--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,56 @@
 {
-  "vendor": "CHANGE_ME",
-  "name": "CHANGE_ME",
-  "version": "0.0.0",
-  "title": "CHANGE_ME",
-  "description": "CHANGE_ME",
+  "vendor": "borntwo",
+  "name": "helloworldtest",
+  "version": "0.0.1",
+  "title": "Helloworld Test",
+  "description": "First VTEX IO app",
   "builders": {
     "react": "3.x",
     "messages": "1.x",
-    "docs": "0.x"
+    "docs": "0.x",
+    "admin": "0.x",
+    "graphql": "1.x",
+    "node": "6.x",
+    "store": "0.x"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vtex.styleguide": "9.x",
+    "vtex.store-graphql": "2.x",
+    "vtex.rewriter": "1.x",
+    "vtex.catalog-api-proxy": "0.x",
+    "vtex.store-header": "2.x",
+    "vtex.flex-layout": "0.x",
+    "vtex.category-menu": "2.x",
+    "vtex.sticky-layout": "0.x",
+    "vtex.menu": "2.x"
+  },
   "registries": [
     "smartcheckout"
   ],
-  "policies": [],
+  "policies": [
+    {
+      "name": "outbound-access",
+      "attrs": {
+        "host": "portal.vtexcommercestable.com.br",
+        "path": "/api/catalog/*"
+      }
+    },
+    {
+      "name": "outbound-access",
+      "attrs": {
+        "host": "api.vtex.com",
+        "path": "/*"
+      }
+    },
+    {
+      "name": "graphql-query"
+    },
+    {
+      "name": "vtex.catalog-api-proxy:catalog-proxy"
+    },
+    {
+      "name": "vtex.rewriter:resolve-graphql"
+    }
+  ],
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
